--- a/package.json
+++ b/package.json
@@ -5,27 +5,26 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "biome check",
+    "format:fix": "biome check --write"
   },
   "dependencies": {
-    "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.4",
-    "class-variance-authority": "^0.7.1",
+    "@mantine/core": "8.3.10",
+    "@mantine/hooks": "8.3.10",
     "clsx": "^2.1.1",
     "lucide-react": "^0.556.0",
-    "next": "15.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "16.0.10",
+    "next-intl": "4.6.1",
+    "react": "19.2.3",
+    "react-dom": "19.2.3",
     "tailwind-merge": "^3.4.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss": "4.1.18"
   },
   "devDependencies": {
-    "@types/node": "25.0.0",
+    "@biomejs/biome": "2.3.10",
+    "@types/node": "25.0.3",
     "@types/react": "19.2.7",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.10",
     "typescript": "5.9.3"
   }
 }
