--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "regalprop-next15",
-  "version": "1.5.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "format": "biome check",
-    "format:fix": "biome check --write"
-  },
-  "dependencies": {
-    "@mantine/core": "8.3.10",
-    "@mantine/hooks": "8.3.10",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.556.0",
-    "next": "16.0.10",
-    "next-intl": "4.6.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0",
-    "tailwindcss": "4.1.18"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.3.10",
-    "@types/node": "25.0.3",
-    "@types/react": "19.2.7",
-    "typescript": "5.9.3"
-  }
+	"name": "regalprop-next15",
+	"version": "1.5.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"format": "biome check",
+		"format:fix": "biome check --write"
+	},
+	"dependencies": {
+		"@mantine/core": "8.3.10",
+		"@mantine/hooks": "8.3.10",
+		"@tailwindcss/postcss": "^4.1.18",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.556.0",
+		"next": "16.0.10",
+		"next-intl": "4.6.1",
+		"react": "19.2.3",
+		"react-dom": "19.2.3",
+		"react-icons": "^5.5.0",
+		"tailwind-merge": "^3.4.0",
+		"tailwindcss": "4.1.18"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.3.10",
+		"@types/node": "25.0.3",
+		"@types/react": "19.2.7",
+		"postcss": "^8.5.6",
+		"postcss-preset-mantine": "^1.18.0",
+		"postcss-simple-vars": "^7.0.1",
+		"typescript": "5.9.3"
+	}
 }
