--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@mantine/core": "8.3.10",
 		"@mantine/hooks": "8.3.10",
+		"@mantine/modals": "^8.3.10",
 		"@tailwindcss/postcss": "^4.1.18",
 		"clsx": "^2.1.1",
 		"lucide-react": "^0.556.0",
@@ -21,7 +22,8 @@
 		"react-dom": "19.2.3",
 		"react-icons": "^5.5.0",
 		"tailwind-merge": "^3.4.0",
-		"tailwindcss": "4.1.18"
+		"tailwindcss": "4.1.18",
+		"zustand": "^5.0.9"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "2.3.10",
