--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
 		"format:fix": "biome check --write"
 	},
 	"dependencies": {
+		"@mantine/carousel": "^8.3.10",
 		"@mantine/core": "8.3.10",
 		"@mantine/hooks": "8.3.10",
 		"@mantine/modals": "^8.3.10",
 		"@tailwindcss/postcss": "^4.1.18",
 		"clsx": "^2.1.1",
+		"embla-carousel": "^8.6.0",
+		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.556.0",
 		"next": "16.0.10",
 		"next-intl": "4.6.1",
